# capybara

./: .readthedocs.yml  CHANGELOG.md  DOCUMENTATION_SETUP.md  LICENSE  MANIFEST.in  PACKAGING.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: docs.yml
docs/: README.md  requirements.txt
docs/sphinx/: architecture.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  make.bat  quickstart.rst
docs/sphinx/_static/: custom.css
docs/sphinx/api/: domain.rst  inference.rst  visualization.rst  warehouse.rst
scripts/: release.ps1  release.sh
src/capybara/: __init__.py
src/capybara/domain/: __init__.py  relationships.py  schema.py
src/capybara/inference/: __init__.py  base.py  engine.py  registry.py
src/capybara/inference/rules/: __init__.py
src/capybara/visualization/: __init__.py  base.py  factory.py  mermaid.py  plantuml.py
src/capybara/warehouse/: __init__.py  base.py
src/capybara/warehouse/fabric/: __init__.py  fabric_warehouse.py
